# multi-model-chatbot

./: .gitignore  DOCKER_README.md  README.md  config.example.js  docker-compose.yml  index.html  script.js  style.css
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/chatbot_app/: views.py
backend/chatbot_project/: settings.py  urls.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatForm.jsx  ChatMessage.jsx  ChatbotIcon.jsx
frontend/src/constants/: apis.js
frontend/src/services/: chatService.js
frontend/src/utils/: sendRequest.js
